bump okhttps-jackson from 3.3.0 to 3.4.0 and add aliyun repository